Remove XML namespaces dct and cc

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Assistive Technology | Accessibility Resources</title>
@@ -45,16 +45,16 @@
 
   <main>
     <h2>Where to Find Assistive Technologies?</h2>
-    <p>The 
+    <p>The
       <a href="http://www.eastin.eu/en/searches/products/index">European Assistive Technology Information Network (<abbr>EASTIN</abbr>)</a>
-      provides a 
+      provides a
       <q>European search engine on Assistive Technology, working in all languages of the European Union</q>.
     </p>
     <p>The <a href="https://ul.gpii.net/">Unified Listing</a>
       provided by the Global Public Inclusive Infrastructure (<abbr>GPII</abbr>)
       allows you to search twelve databases of assistive technologies and other accessibility solutions.
     </p>
-    <p>The page 
+    <p>The page
       <a href="https://wiki.gpii.net/w/ATDatabases"><abbr>AT</abbr>Databases</a>
       in the <abbr>GPII</abbr> wiki contains a list of databases of assistive technologies.
       The page was last updated in April 2015.
@@ -94,22 +94,19 @@
       who has
       <a href="https://en.wikipedia.org/wiki/Amyotrophic_lateral_sclerosis"><abbr 
       title="amyotrophic lateral sclerosis">ALS</abbr></a>. For articles about 
-      this, see
+      this, see the following links:
     </p>
     <ul>
-      <li>Collins, Katie: 
-        <a href="http://www.wired.co.uk/news/archive/2014-12/02/stephen-hawking-intel-communication-system">Stephen 
-        Hawking's new speech system is free and open-source</a>, <i>Wired</i>,
+      <li>Collins, Katie:
+        <a href="http://www.wired.co.uk/news/archive/2014-12/02/stephen-hawking-intel-communication-system">Stephen Hawking's new speech system is free and open-source</a>, <i>Wired</i>,
         2 December 2014.
       </li>
-      <li>Sewell, Anne: 
-        <a href="http://www.inquisitr.com/2353967/stephen-hawkings-speech-software-now-available-open-source-free-online/">Stephen 
-        Hawking&#8217;s Speech Software Now Available Open Source &amp; Free Online</a>,
+      <li>Sewell, Anne:
+        <a href="http://www.inquisitr.com/2353967/stephen-hawkings-speech-software-now-available-open-source-free-online/">Stephen Hawking&#8217;s Speech Software Now Available Open Source &amp; Free Online</a>,
         <i>The Inquisitr News</i>, 21 August 2015.
       </li>
-      <li><a href="https://n0where.net/assistive-context-aware-toolkit-acat/">Assistive 
-        Context-Aware Toolkit: <abbr>ACAT</abbr></a>, <i>n0where.net</i>,
-        (no date; 2015).
+      <li><a href="https://n0where.net/assistive-context-aware-toolkit-acat/">Assistive Context-Aware Toolkit: <abbr>ACAT</abbr></a>,
+        <i class="website">n0where.net</i>, (no date; 2015).
       </li>
     </ul>
 
@@ -130,19 +127,14 @@
       <li>
         <a href="https://marketing.kurzweiledu.com/acton/media/11777/drive-meaningful-progress-with-the-latest-release-of-kurzweil-3000">Kurzweil 3000</a>.
       </li>
-      <li>Taylor, Julia: 
+      <li>Taylor, Julia:
         <a href="https://www.jisc.ac.uk/blog/how-technology-can-help-dyslexic-learners-help-themselves-05-nov-2015">How technology can help dyslexic learners help themselves</a>,
-        <i class="blog"><abbr>JISC</abbr> blog</i>, 05.11.2015. 
+        <i class="blog"><abbr>JISC</abbr> blog</i>, 05.11.2015.
       </li>
-      <li>Dyslexia Help at the University of Michigan: 
+      <li>Dyslexia Help at the University of Michigan:
         <a href="http://dyslexiahelp.umich.edu/tools/apps">Apps for Dyslexia and Learning Disabilities</a>.
       </li>
-      <!-- @@check https://duckduckgo.com/?q=%22open+source%22+software+dyslexia&ia=web -->
-      <!--
-      <li>
-        <a href=""></a>
-      </li>
-      -->
+      <!--@@check https://duckduckgo.com/?q=%22open+source%22+software+dyslexia&ia=web -->
     </ul>
 
     <h2>Screen Readers</h2>
@@ -219,14 +211,14 @@
     <ul>
       <li>
         <a href="http://eviacam.sourceforge.net/index.php">eViacam (Enable Viacam)</a>:
-        open source mouse replacement software that allows you to use head movements 
+        open source mouse replacement software that allows you to use head movements
         as a replacement for mouse movements. The software requires a standard
         webcam (or other camera) to register head movements.
         Three versions are available: for Microsoft Windows, <abbr>GNU</abbr>/Linux
         and Android.
         (Licence: <abbr>GNU</abbr> General Public License version 3.)
       </li>
-      <!-- Related projects:
+      <!--Related projects:
         * Switch Viacam: "Webcam based switch emulator": http://sviacam.sf.net/ 
         * SITPLUS: "Ludic-therapeutic activities for people with disabilities": http://sitplus.crea-si.com/ 
       -->
@@ -236,17 +228,17 @@
     <ul>
       <li>Cole, Elliot:
         <i class="booktitle">Patient-Centered Design of Cognitive Assistive Technology for Traumatic Brain Injury Telerehabilitation</i>.
-        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies.
         <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00478ED1V01Y201302ARH003">Morgan &amp; Claypool, March 2013</a>. (159 pages)
       </li>
       <li>Carmien, Stefan:
         <i class="booktitle">Assistive Technology Design for Intelligence Augmentation</i>.
-        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies.
         <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00709ED1V01Y201603ARH010">Morgan &amp; Claypool, April 2016</a>. (171 pages)
       </li>
       <li>Rebola, Claudia B.:
         <i class="booktitle">Designed Technologies for Healthy Aging</i>.
-        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies. 
+        Synthesis Lectures on Assistive, Rehabilitative, and Health-Preserving Technologies.
         <a href="http://www.morganclaypool.com/doi/abs/10.2200/S00576ED1V01Y201404ARH006">Morgan &amp; Claypool, January 2015</a>. (186 pages)
       </li>
       <li>Henke, Anika:
@@ -286,23 +278,18 @@
         <a href="https://www.routledge.com/The-Role-of-Assistive-Technology-in-Fostering-Inclusive-Education-Strategies/Hoogerwerf-Mavrou-Traina/p/book/9781138370081"><abbr>ISBN</abbr> 9781138370081</a>.
       </li>
     </ul>
-
   </main>
 
   <footer>
-    <p id="licence"><a rel="license"
-    href="http://creativecommons.org/licenses/by-sa/4.0/"><img
-    alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
-    src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /> </a> <br />
-    <span xmlns:dct="http://purl.org/dc/terms/"
-    href="http://purl.org/dc/dcmitype/Text"><a
-    href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility
-    Resources</a></span> by <a xmlns:cc="http://creativecommons.org/ns#"
-    href="https://github.com/cstrobbe"
-    rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a <a
-    xml:lang="en-US" lang="en-US" rel="license"
-    href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
-    Attribution-ShareAlike 4.0 International License</a>.</p>
+    <p id="licence">
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+      <br />
+      <span><a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility Resources</a></span>
+      by
+      <a href="https://github.com/cstrobbe">Christophe Strobbe</a>
+      is licensed under a
+      <a lang="en-US" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    </p>
   </footer>
 </body>
 </html>
