--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -941,18 +941,40 @@
           <q>If you're looking for Backbeat Books, Amadeus Press, Applause Theatre &amp; Cinema Books, or Limelight Editions, <a href="https://rowman.com/" target="_blank">click here</a>.</q>
         </li>
       </ul>
+      <p>Marquee:</p>
+      <ul>
+        <li>
+          <a href="https://www.bundesregierung.de/breg-de/themen/coronavirus" hreflang="de" lang="de">Coronavirus in Deutschland</a>,
+          <i class="website">Bundesregierung</i>, (accessed on 25.05.2020). Marquee with a pause button.
+        </li>
+        <li>
+          <a href="https://www.finanznachrichten.de/nachrichten-2020-11/51366215-belgien-kritisiert-deutsche-corona-weihnachtsregeln-016.htm" hreflang="de" lang="de">Belgien kritisiert deutsche Corona-Weihnachtsregeln</a>,
+          <i class="website">FinanzNachrichten.de</i>, 28.11.2020. "Ticker" labelled <span lang="de">Ad hoc-Mitteilungen</span>; uses <code>&lt;div class="js-marque"&gt;</code> and pauses on hover.
+          (Last verified on 25.02.2021.)
+        </li>
+        <li>
+          <a href="https://businessam.be/belgie-start-op-5-januari-met-vaccineren-3/" hreflang="nl" lang="nl">België start op 5 januari met vaccineren</a>,
+          <i class="website">Business <abbr>AM</abbr></i>, 02.12.2020. Stock exchange ticker at the top of the page; uses <code>&lt;div class="o-marquee js-marquee"&gt;</code>.
+          (Last verified on 25.02.2021.)
+        </li>
+        <li>
+          <a href="https://www.officemuseum.com/">Early Office Museum</a>: this website has a marquee ánd animated <abbr>GIFs</abbr>.
+          (Last verified on 25.02.2021.)
+        </li>
+        <li>
+          <a href="https://cat.eduroam.de/">eduroam Configuration Assistant Tool</a>: uses a <code>marquee</code> element that alternates its direction.
+          <!--Text: "Der Dienst cat.eduroam.de wird am 30. Juni 2021 eingestellt, nutzen Sie bitte cat.eduroam.org!" -->
+          (Last verified on 25.02.2021.)
+        </li>
+        <li>
+          <a href="http://www.sixwives.info/doublet.htm">Doublet</a>: <code>marquee</code> element at the bottom of the page.
+          (Last verified on 25.02.2021.)
+        </li>
+      </ul>
     </section>
   <!--Example pages:
     * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html
     * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
-    * marquee:
-      - (Nov 2020) https://www.bundesregierung.de/breg-de/service/publikationen/nationaler-aktionsplan-2-0-der-bundesregierung-zur-un-behindertenrechtskonvention-un-brk--729496
-      - (02.12.2020) FinanzNachrichten.de: <div class="js-marque">: pausiert bei hover (kein Tastaturfokus?): https://www.finanznachrichten.de/nachrichten-2020-11/51366215-belgien-kritisiert-deutsche-corona-weihnachtsregeln-016.htm
-      - (02.12.2020) https://businessam.be/belgie-start-op-5-januari-met-vaccineren-3/
-      - (08.12.2020: marquee and animated gifs) https://www.officemuseum.com/
-      - (23.12.2020): marquee saying "Der Dienst cat.eduroam.de wird am 30. Juni 2021 eingestellt, nutzen Sie bitte cat.eduroam.org!" https://cat.eduroam.de/
-      - (24.01.2021): marquee element at bottom of page: http://www.sixwives.info/doublet.htm
-      - marquee with pause button: https://www.bundesregierung.de/breg-de/themen/coronavirus
     * Pressing pagedown button takes you to the next article instead of scrolling down (02.12.2020): https://www.euronews.com/2020/12/01/us-attorney-general-william-barr-says-no-widespread-election-fraud-disputing-trump
     * two head elements, each containing a title element (02.12.2020): https://dev.to/rly
     * on hover, page pans, so button moves away from mouse: https://www.payot-rivages.fr/
@@ -962,7 +984,6 @@
     * NCERT / National Council of Educational Research & Training: visible skip links, "Screen Reader Access", contrast widgets: https://ncert.nic.in/index.php?ln=
         Screen Reader Access: https://ncert.nic.in/screen-reader.php
   -->
-
     <h2>Other Links</h2>
     <ul>
       <li>
