Add:PDFs nd Co: Dokumente barrierefrei veröffentlichen (Bremen)

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -95,6 +95,10 @@
         where you can download <abbr>PDF</abbr> files with instructions for Microsoft Word 2016, Microsoft PowerPoint 2016, Microsoft Word 2019 and Microsoft PowerPoint 2019.
         <!--see downloads page in German: https://tu-dresden.de/tu-dresden/universitaetskultur/diversitaet-inklusion/agsbs/dokumente -->
       </li>
+      <li><span lang="de">
+        <a href="https://www.behindertenbeauftragter.bremen.de/der_beauftragte/zentralstelle_fuer_barrierefreie_informationstechnik/pdfs_und_co__dokumente_barrierefrei_veroeffentlichen-33255" hreflang="de"><abbr>PDF</abbr>s und Co: Dokumente barrierefrei veröffentlichen</a>,
+        <i class="website">Der Landesbehindertenbeauftragte der Freien Hansestadt Bremen</i></span> (no date; accessed on 26.02.2021).
+      </li>
       <li>
         <a href="https://webaim.org/techniques/ooo/">OpenOffice.org Writer</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in October 2011.
