--- a/body-of-knowledge-certificates.html
+++ b/body-of-knowledge-certificates.html
@@ -152,13 +152,14 @@
     -->
   </main>
   <footer>
-    <p id="licence"><a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="../img/cc-licence-by-sa-88x31.png" /></a>
-    <br />
-    <a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility Resources</a>
-    by
-    <a href="https://github.com/cstrobbe" rel="cc:attributionURL">Christophe Strobbe</a>
-    is licensed under a
-    <a xml:lang="en-US" lang="en-US" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    <p id="licence">
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="img/cc-licence-by-sa-88x31.png" /></a>
+      <br />
+      <span class="sitename"><a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility Resources</a></span>
+      by
+      <a href="https://github.com/cstrobbe">Christophe Strobbe</a>
+      is licensed under a
+      <a lang="en-US" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
     </p>
   </footer>
 </body>
