Minor edits in footer

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -282,9 +282,9 @@
 
   <footer>
     <p id="licence">
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License Attribution-ShareAlike" style="border-width:0" src="img/cc-licence-by-sa-88x31.png" /></a>
       <br />
-      <span><a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility Resources</a></span>
+      <span class="sitename"><a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility Resources</a></span>
       by
       <a href="https://github.com/cstrobbe">Christophe Strobbe</a>
       is licensed under a
