Add: IAAP: Built Environment Taskforce

--- a/body-of-knowledge-certificates.html
+++ b/body-of-knowledge-certificates.html
@@ -120,6 +120,11 @@
         <li>
           <a href="https://www.accessibilityassociation.org/adscontentoutline">Accessible Document Specialist Content Outline</a>,
           <i class="website"><abbr>IAAP</abbr></i>.
+        </li>
+        <li>
+          <a href="https://www.accessibilityassociation.org/cpabetaskforce">Built Environment Taskforce</a>,
+          <i class="website"><abbr>IAAP</abbr></i>.
+        </li>
       </ul>
       <!--
         https://duckduckgo.com/?q=preparation+for+certificate+iwas+iaap+%22web+accessibility+specialist%22&t=ffab&ia=web
