Add: CommonLook: Testing PDF ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -227,6 +227,10 @@
         <a href="https://www.youtube.com/watch?v=KUFPtk9jU5I"><abbr>PDF</abbr> Accessibility: Images</a>
         (YouTube, 2 minutes, 28.01.2019).
       </li>
+      <li>
+        <a href="https://commonlook.com/accessibility-training/on-demand-video-webinars/871-0953-7682/">Testing <abbr>PDF</abbr>s for Accessibility and Standards Conformance</a>,
+        <i class="website">CommonLook</i>, 26.08.2020.
+      </li>
       <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxqaWGcKotFiNHYuHSd5gbs0">Creating Accessible <abbr>PDF</abbr> files</a>
         (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019):
         this is a YouTube playlist containing videos on topics such as editing <abbr>OCR</abbr> done in Adobe Acrobat,
