Add: UX SE: What is the most dyslexia friendly font?

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1709,6 +1709,10 @@
           <a href="https://io9.gizmodo.com/can-this-special-font-really-help-readers-with-dyslexia-1679274354">A Special Font to Help Dyslexics? More Like Snake Oil.</a>,
           <i class="website">Gizmodo</i>, 13.01.2015.
         </li>
+        <li>
+          <a href="https://ux.stackexchange.com/q/72290/91974">What is the most dyslexia friendly font?</a>,
+          <i class="website">User Experience Stack Exchange</i>, 20.01.2015.
+        </li>
         <li class="deleted"><del datetime="2021-03-01">Gifford, Mike:
           <a href="https://openconcept.ca/blog/mike/dyslexia-fonts-open-source">Dyslexia, Fonts &amp; Open Source</a>,
           <i class="website">OpenConcept</i>, 27.07.2011.
