--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1437,6 +1437,10 @@
         <i class="booktitle">Basic Vision: An Introduction to Visual Perception</i>. Revised edition. Oxford University Press, 2012. (424 pages)
         <a href="https://global.oup.com/academic/product/basic-vision-9780199572021"><abbr>ISBN</abbr> 9780199572021</a>.
       </li>
+      <li>
+        <a href="https://www.zotero.org/groups/2580211/trainomat/tags/(Ra)%20***/library">TRAINomat</a>.
+        Background: <a href="https://digitalisierung.hdm-stuttgart.de/barrierefreiheit/trainomat/" hreflang="de" lang="de">TRAINomat (Kompetezzentrum für Digitale Barrierefreiheit, Hochschule der Medien, Stuttgart)</a>.
+      </li>
     </ul>
 
     <p>Artifial intelligence (<abbr>AI</abbr>) and accessibility:</p>
