Add example with animated logo (ulaval.ca)

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -927,6 +927,9 @@
         <li>Animated logo:
           <a href="https://www.ethicalsystems.org/">Ethical Systems</a> (last accessed 24.01.2021).
         </li>
+        <li>Animated logo (top left) and e-mail image (bottom centre):
+          <a href="http://axl.cefan.ulaval.ca/index.html" hreflang="fr" lang="fr">L'aménagement linguistique dans le monde: page d'accueil</i>
+        </li>
       </ul>
       <p>Live updates:</p>
       <ul>
