Add: Irlen Institute

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -864,6 +864,14 @@
           <a href="https://accessibe.com/product">accessiBe</a>.
           Commercial product. Note that its claim of full compliance is contradicted by the fact that making a website accessible is not a process that can be fully automated.
         </li>
+        <li>Setting a different background colour (for dyslexia or Irlen synrome):
+          <ul>
+            <li>
+              <a href="https://irlen.com/">Irlen Institute</a>: 11 different background colours,
+              but the chosen background colour is not remembered when navigating to another page.
+            </li>
+          </ul>
+        </li>
       </ul>
     </section>
 
