Add: Irlen Diagnostic Clinic Newcastle

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -870,6 +870,9 @@
               <a href="https://irlen.com/">Irlen Institute</a>: 11 different background colours,
               but the chosen background colour is not remembered when navigating to another page.
             </li>
+            <li>
+              <a href="https://www.irlendyslexia.com/">Irlen Diagnostic Clinic Newcastle</a>: 12 different background colours.
+            </li>
           </ul>
         </li>
       </ul>
