Add: Dyslexia Dailey

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -873,6 +873,10 @@
             <li>
               <a href="https://www.irlendyslexia.com/">Irlen Diagnostic Clinic Newcastle</a>: 12 different background colours.
             </li>
+            <li>
+              <a href="https://www.dyslexiadaily.com/">Dyslexia Dailey</a>: 9 different background colours.
+              (The site also has Recite.)
+            </li>
           </ul>
         </li>
       </ul>
