Add: Overlay Fact Sheet

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1981,6 +1981,10 @@
         </li>
         <li><strong>Overlay</strong> products are sold as a tool that magically solves a website's accessibility issues.
           <ul>
+            <li>
+              <a href="https://overlayfactsheet.com/">Overlay Fact Sheet</a>:
+              created by Karl Groves in March 2021 and signed by dozens of accessibility advocates and experts.
+            </li>
             <li>Kornmeier, Tony:
               <a href="https://www.deque.com/blog/not-all-accessibility-overlays-are-created-equal/">Not All Accessibility Overlays Are Created Equal</a>,
               <i class="blog">Deque blo</i>, 06.04.2020.
