--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -43,6 +43,14 @@
   </nav>
 
   <main>
+    <blockquote id="introquote" cite="https://twitter.com/feather/status/1369379019041423363">
+      <p>Devs don't get mad because you're asking them to make things accessible.</p>
+      <p>They get mad because you're asking them to do work over again.</p>
+      <p>They get mad because you could have asked earlier.</p>
+      <p>They get mad because you contradict yourself later on and recommend something different.</p>
+      <p><cite><a href="https://twitter.com/feather/status/1369379019041423363">Derek Featherstone on Twitter, 09.03.2021</a></cite>
+    </blockquote>
+
     <h2>Introductory Articles</h2>
     <ul>
       <li><abbr title="World Wide Web Consortium">W3C</abbr> Web Accessibility Initiative (<abbr>WAI</abbr>):
