Add: Stack Overflow: Content principles

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1466,6 +1466,13 @@
           This is a <abbr>EU</abbr>-funded project that developed an add-on for Firefox and Chrome
           to support cognitive accessibility for web content.
         </li>
+        <li>
+          <a href="https://stackoverflow.design/content/guidelines/principles/">Content principles</a>,
+          <i class="website">Stack Overflow</i> (accessed on 16.03.2021).
+          <br />This is a set of guidelines for Stack Overflow employees. Among those guidelines is the following:
+          <q>Write for a 7th grade reading level. Stack Overflow users are busy people with limited time and attention. They’re also located all over the world with different levels of English fluency.
+          You can help everyone follow along by choosing simple, consistent words and phrases, and being careful about jokes and cultural references.</q>
+        </li>
       </ul>
       <p>Readability of web content in German:</p>
       <ul>
