Add: The Handoff with Derek Mei: Preparing for ...

--- a/body-of-knowledge-certificates.html
+++ b/body-of-knowledge-certificates.html
@@ -125,6 +125,10 @@
           <a href="https://www.accessibilityassociation.org/cpabetaskforce">Built Environment Taskforce</a>,
           <i class="website"><abbr>IAAP</abbr></i>.
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=dHRFvuSKM1o">Preparing for the IAAP Accessibility Certifications! 📚 CPACC and WAS Overview</a>
+          (<i class="ytchannel">The Handoff with Derek Mei</i> on YouTube, 7 minutes, 03.02.2021).
+        </li>
       </ul>
       <!--
         https://duckduckgo.com/?q=preparation+for+certificate+iwas+iaap+%22web+accessibility+specialist%22&t=ffab&ia=web
