Add link to WAS sample exam questions

--- a/body-of-knowledge-certificates.html
+++ b/body-of-knowledge-certificates.html
@@ -108,6 +108,12 @@
         <li>
           <a href="https://www.accessibilityassociation.org/wascertification">Web Accessibility Specialist (<abbr>WAS</abbr>)</a>,
           <i class="website"><abbr>IAAP</abbr></i>.
+          <br />See also:
+          <ul>
+            <li>
+              <a href="https://www.accessibilityassociation.org/wassamplequestions"><abbr>WAS</abbr> Sample Exam Questions</a>.
+            </li>
+          </ul>
         </li>
         <li>
           <a href="https://www.accessibilityassociation.org/prepareforwas">Prepare for <abbr>WAS</abbr></a>,
