Add: Mabacher: Untertitel ORF; Mabacher: Audiodeskription; other videos about audio description

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -605,6 +605,16 @@
         <a href="http://www.cine-sens.fr/methodes/rendre-les-films-accessibles-au-handicap-sensoriel/le-sous-titrage-accessibilite/" hreflang="fr">Le sous-titrage pour sourds et malentendants</a>,
         <i class="website">Ciné-sens</i>,</span> 04.04.2014, updated on 22.09.2015.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=G_Fy-KickXg">Wie entstehen Untertitel im <abbr>ORF</abbr>?</a>
+        (<i class="ytchannel"> mabacher<abbr>TV</abbr></i> on YouTube, 17 minutes, 14.08.2016).
+        <br />This video covers a number of challenges involved in subtitle television programs.
+        For example, news programs are sometimes updated with new sections a few minutes before the start of the program.
+        Subtitling live broadcasts relies on respeaking, which also has its challenges, such as homophones (<abbr>e.g.</abbr> <span lang="de">Lehre</span> versus <span lang="de">Leere</span>,
+        or <span lang="de">Punkt</abbr> as a noun versus <span lang="de">Punkt</abbr> to insert a full stop).
+        The interviewee also explains when and how different colours for subtitles are used.
+        When subtitling live interviews, some information may get shortened or partially skipped.
+      </li>
     </ul>
 
     <h3 id="audio-description">Audio Description</h3>
@@ -658,6 +668,31 @@
       <li>
         <a href="https://www.loc.gov/nls/about/services/reference-publications/guides/audio-description-resource-guide/">Audio Description Resource Guide</a>,
         <i class="website">National Library Service for the Blind and Print Disabled (Library of Congress)</i>, 2018.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=gZojp0mG7Y0" lang="de">Was ist Audiodeskription? (audiodekriptive Version für Sehbehinderte)</a>
+        (<i class="ytchannel">SwissFootballLeague</i> on YouTube, 3 minutes, 19.10.2017).
+        <br />In this unususal example, the audio description is inserted before the start and at the end of the video.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=uI6NMpYYqXE">How audio descriptions help the visually impaired enjoy movies</a>
+        (<i class="ytchannel">Soutch China Morning Post</i> on YouTube, 4 minutes, 08.07.2018).
+        <br />This short video is about audio description in cinemas in Hong Kong. It contains excerpts from interviews
+        both with a blind cinema goer who lost her sight due to retinitis pigmentosa and with an audio describer.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=QJguIANUEX8">"Not Much To See": How the Blind Enjoy Movies</a>
+        (<i class="ytchannel">Academy Originals</i> on YouTube, 4 minutes, 19.05.2014).
+        <br />This video contains excerpts from an interview with a blind person explaning why they go to the cinema
+        and an example of audio description from an Indiana Jones film.
+      </li>
+      <li><span lang="de">
+        <a href="https://www.youtube.com/watch?v=1r-IGfQ5Ryg">Audiodeskription im <abbr>ORF</abbr></a>
+        (<i class="ytchannel"> mabacher<abbr>TV<abbr></i> on YouTube, 10 minutes, 22.11.2017).
+        <br />This video is about the audio description for sports programs at the Austrian broadcaster <abbr>ORF</abbr>.
+        In contrast with audio description for films, this is not a description that supplements the standard audio track but replaces it.
+        However, the video explains very well why audio description is important for people with visual impairments
+        and what audio describes need to be capable of.
       </li>
       <li>Kleege, Georgina; Wallin, Scott:
         <a href="https://dsq-sds.org/article/view/4622/3945">Audio Description as a Pedagogical Tool</a>,
