Add: gript.ie: marquee

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -988,6 +988,10 @@
           <a href="http://www.sixwives.info/doublet.htm">Doublet</a>: <code>marquee</code> element at the bottom of the page.
           (Last verified on 25.02.2021.)
         </li>
+        <li>
+          <a href="https://gript.ie/ireland-suspends-astrazeneca-vaccine-as-norway-investigates-blood-clots/">Ireland suspends AstraZeneca vaccine as Norway investigates blood clots</a>.
+          (Accessed on 20.03.2021.)
+        </li>
       </ul>
     </section>
   <!--Example pages:
@@ -1001,6 +1005,7 @@
     * h1 element: "T H E   C A N T E R B U R Y   T A L E S" : http://www.librarius.com/index.html
     * NCERT / National Council of Educational Research & Training: visible skip links, "Screen Reader Access", contrast widgets: https://ncert.nic.in/index.php?ln=
         Screen Reader Access: https://ncert.nic.in/screen-reader.php
+    * "Home"-link (SVG pictogram not marked as decorative): https://tas2580.net/
   -->
     <h2>Other Links</h2>
     <ul>
