Add: How to Record Screen using Microsoft PowerPoint

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -1162,6 +1162,11 @@
     </ul>
     <p>Other resources and tips not directly related to accessibility:</p>
     <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=KCi7z-bJJXw">How to Record Screen using Microsoft PowerPoint</a>
+        (<i class="ytchannel">Kevin Stratvert</i> on YouTube, 11 minutes, 03.05.2020).
+        <!--@@see playlist "PowerPoint": https://www.youtube.com/playlist?list=PLlKpQrBME6xIKFhSxvoRzy5mrewPe1PcM -->
+      </li>
       <li>Galang, Anton:
         <a href="https://www.lifewire.com/best-open-source-video-editing-software-4590219">The 9 Best Open Source Video Editing Software of 2021</a>,
         <i class="website">Lifewire</i>, 16.09.2020.
