Add: Audio Description in a Couple Minutes

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -670,6 +670,17 @@
         <i class="website">Digital.gov</i>, 30.06.2014.
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=DTvhox7ylEU">Audio Description in a Couple Minutes</a>
+        (<i class="ytchannel">Rooted In Rights</i> on YouTube, 2 minutes, 22.07.2019).
+        <br />This video briefly explains what audio description is and gives a few recommendations about what to narrate in an audio description:
+        <ol>
+          <li>Content that needs to be narrated includes all text that appears on screen, such as title cards and lower thirds.</li>
+          <li>If applicable to your video, it is a good idea to let speakers introduce themselves. This makes it easier for listeners to identify and differentiate between the speakers throughout the video.</li>
+          <li>Describe scenes that aren't heard.</li>
+          <li>As a general tip: listen to your videos with your eyes closed to check what vital information you are missing.</li>
+        </ol>
+      </li>
+      <li>
         <a href="https://acb.org/adp/">The Audio Description Project</a>,
         <i class="website">American Council of the Blind</i> (no date; accessed on 23.03.2021).
       </li>
