--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -670,6 +670,22 @@
         <i class="website">Digital.gov</i>, 30.06.2014.
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=6KRjy4Ga1FU">Audio Descriptions Using Video Editing Software</a>
+        (<i class="ytchannel">Access Mooc</i> on YouTube, 3 minutes, 29.01.2016).
+        <br />This video describes the basic steps for the creation on an audio described video by adding an extra audio track to the video.
+        The demonstration uses Adobe Premiere Pro, but the steps also work with other video programs such as Camtasia Studio.
+        <ol>
+          <li>Research best practices for creating audio descriptions.</li>
+          <li>Using that research, write a script for the audio description.</li>
+          <li>Record the audio descriptions using a good-quality microphone.</li>
+          <li>Save the recordings as an audio file, for example in MP3 format.</li>
+          <li>Import both the video file and the audio file into the video editing software.</li>
+          <li>Add the video to one timeline and the audio to a different timeline.</li>
+          <li>Synchronise the audio with the video (and make any other edits that may be necessary, such as lowering the volume of other audio in the video).</li>
+          <li>Export the combined video and audio tracks as a new video file in a video format such as MP4.</li>
+        </ol>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=DTvhox7ylEU">Audio Description in a Couple Minutes</a>
         (<i class="ytchannel">Rooted In Rights</i> on YouTube, 2 minutes, 22.07.2019).
         <br />This video briefly explains what audio description is and gives a few recommendations about what to narrate in an audio description:
