Add: Hart: Using Animation ...; Souidan: Accessible Text Labels for All

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1886,6 +1886,11 @@
           <a href="https://letsbuildui.dev/articles/reducing-motion-in-animations">Reducing Motion in Animations</a>,
           <i class="website">Let's Build <abbr>UI</abbr></i>, 20.12.2020.
         </li>
+        <li>Hart, Callum:
+          <a href="https://www.callumhart.com/blog/using-animation-to-design-better-user-experiences/">Using Animation to Enhance <abbr>UX</abbr></a>,
+          <i class="blog">Callum Hart's blog</i>, 12.07.2016.
+          <br />This blog post is not about accessibility; it gives examples of how animations can be used in meanngful ways.
+        </li>
       </ul>
     </section>
 
@@ -2286,6 +2291,11 @@
         <li>Head, Val:
           <a href="https://alistapart.com/article/designing-safer-web-animation-for-motion-sensitivity">Designing Safer Web Animation For Motion Sensitivity</a>,
           <i class="website">A List Apart</i>, 08.09.2015.
+        </li>
+        <li>Soueidan, Sara:
+          <a href="https://www.sarasoueidan.com/blog/accessible-text-labels/">Accessible Text Labels For All</a>,
+          <i class="blog">Sara Soueidan's blog</i>, 17.03.2021.
+          <!--Referrer: Paciello Group: https://twitter.com/TPGinteractive/status/1374296483797868551 -->
         </li>
         <li>Ratliff, Eleanor:
           <a href="https://alistapart.com/article/accessibility-whack-a-mole">Accessibility Whack-A-Mole</a>,
