Add: Studying with ADHD

--- a/social-legal.html
+++ b/social-legal.html
@@ -470,6 +470,22 @@
       <!--Sheffield Hallam University: The Skills Centre: Resources: https://blogs.shu.ac.uk/skillscentre/resources/ -->
     </ul>
 
+    <h2>Studying with <abbr>ADHD</abbr></h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=AerWHWhxs0E">How I Succeed with <abbr>ADHD</abbr> at Harvard [<abbr>CC</abbr>]</a>
+        (<i class="ytchannel">65PinkRoses</i> on YouTube, 22 minutes, 12.08.2018).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=4bC5rnWQkvA" lang="de"><abbr>ADHS</abbr> Studium - Wie du trotz <abbr>ADHS</abbr> nach Harvard kommst...</a>
+        (<i class="ytchannel"><abbr>ADHS</abbr> Success</i> on YouTube, 7 minutes, 29.10.2019).
+        <br />This is a German-language summary of the video by 65PinkRoses.
+      </li>
+      <!--@@check https://www.youtube.com/results?search_query=study+harvard+adhd
+        https://duckduckgo.com/?t=ffab&q=%22studieren+mit+adhs%22&ia=web
+      -->
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li>Chiwandire, Desire; Vincent, Louise:
