Add: acb.org, TITUS, wereldbibliotheek.nl, ITU.int

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -853,12 +853,19 @@
           <a href="https://www.atbar.org/"><abbr>AT</abbr>bar</a>: developed at the University of Southampton.
         </li>
         <li>Recite:
-          <li>
-            <a href="https://london.ac.uk/">University of London</a> (&ldquo;Accessibility Tools&rdquo; in the top right corner).
-          </li>
-          <li>
-            <a href="https://www.gmb.org.uk/accessibility-tools">Accessibility tools (<abbr>GMB</abbr> Union)</a> (resize-font icon to the left of the social media links).
-          </li>
+          <ul>
+            <li>
+              <a href="https://london.ac.uk/">University of London</a> (&ldquo;Accessibility Tools&rdquo; in the top right corner).
+            </li>
+            <li>
+              <a href="https://www.gmb.org.uk/accessibility-tools">Accessibility tools (<abbr>GMB</abbr> Union)</a> (resize-font icon to the left of the social media links).
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="https://acb.org/adp/">The Audio Description Project</a>,
+          <i class="website">American Council of the Blind</i> (no date; accessed on 23.03.2021).
+          <br />This site has a widget for &ldquo;Larger Font&rdquo;, &ldquo;Reverse Colors&rdquo; and &ldquo;Large Font, Reverse&rdquo;.
         </li>
         <li>
           <a href="https://accessibe.com/product">accessiBe</a>.
@@ -919,11 +926,11 @@
         </li>
         <li>
           <a href="http://www.enenuru.net/html/main_html/mainframe.htm">enenuru.net</a> (last accessed 24.01.2021).
-          <i class=""></i>,
         </li>
         <li>
-          <a href="http://titus.fkidg1.uni-frankfurt.de/indexe.htm" hreflang="de" lang="de"><abbr>TITUS</abbr>: Thesaurus Indogermanischer Text- und Sprachmaterialien</a>,
-          <i class=""></i>,
+          <a href="http://titus.fkidg1.uni-frankfurt.de/indexe.htm" hreflang="de" lang="de"><abbr>TITUS</abbr>: Thesaurus Indogermanischer Text- und Sprachmaterialien</a>.
+        </li>
+        <li><a href="http://www.wereldbibliotheek.nl/" hreflang="nl" lang="nl">Wereldbibliotheek</a> (accessed on 22.03.2021).
         </li>
       </ul>
       <p>Animated background:</p>
@@ -991,6 +998,17 @@
         <li>
           <a href="https://gript.ie/ireland-suspends-astrazeneca-vaccine-as-norway-investigates-blood-clots/">Ireland suspends AstraZeneca vaccine as Norway investigates blood clots</a>.
           (Accessed on 20.03.2021.)
+        </li>
+      </ul>
+      <p>Nested tables:</p>
+      <ul>
+        <li>
+          <a href="https://www.itu.int/rec/T-REC-V.18/en">V.18 : Operational and interworking requirements for DCEs operating in the text telephone mode</a>,
+          <i class="website">International Telecommunications Union (<abbr>ITU</abbr>)</i> (accessed on 17.03.2021).
+        </li>
+        <li>
+          <a href="https://www.itu.int/rec/T-REC-G.722/e">G.722 : 7 kHz audio-coding within 64 kbit/s</a>,
+          <i class="website">International Telecommunications Union (<abbr>ITU</abbr>)</i> (accessed on 17.03.2021).
         </li>
       </ul>
     </section>
