Add: definition of audio description

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -621,6 +621,12 @@
     <!--Audio description can also be helpful for autistic people: "autistic friends say it's helpful as they can't decode faces/body language." 
         https://www.futurelearn.com/courses/digital-accessibility/1/comments/17624800
     -->
+    <p><dfn>Audio description</dfn> refers to a type of narration used to provide information about essential visual elements in a video for the benefit of visually impaired users.
+      Audio description is usually inserted in pauses in the dialogue, and the resulting audio-described video is then offered as an alternative to the default version.
+      In instructional videos and tutorials, it is often possible to avoid the creation of a separate video by making sure that all the essential visual information is narrated
+      in the original version of the video. The <a href="https://www.w3.org/WAI/media/av/av-content/#plan-description">Web Accessibility's tutorial on video content</a>
+      calls this &ldquo;integrated description&rdquo;; the <a href="https://acb.org/adp/articles/edv.html">American Council of the Blind</a> calls this &ldquo;embedded described video&rquo;.
+    </p>
     <ul>
       <li>
         <a href="https://www.w3.org/WAI/media/av/description/">Audio Description of Visual Information</a>,
@@ -699,6 +705,8 @@
       <li>
         <a href="https://acb.org/adp/">The Audio Description Project</a>,
         <i class="website">American Council of the Blind</i> (no date; accessed on 23.03.2021).
+        <br />See for example,
+        <a href="https://acb.org/adp/articles/edv.html"><abbr>EDV</abbr>: Embedded Described Video</a>.
       </li>
       <li>
         <a href="https://www.loc.gov/nls/about/services/reference-publications/guides/audio-description-resource-guide/">Audio Description Resource Guide</a>,
