add: Spellacy: Should I Use An Accessibility Overlay?

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1991,11 +1991,14 @@
           This includes various input types (<abbr>e.g.</abbr> <code>&lt;input type="date"&gt;</code>, <code>&lt;progress&gt;</code>,
           <code>&lt;details&gt;&lt;summary&gt;</code> and <code>&lt;video&gt;</code>.
         </li>
-        <li><strong>Overlay</strong> products are sold as a tool that magically solves a website's accessibility issues.
+        <li><strong>Overlay</strong> products are sold as a tools that magically solve a website's accessibility issues.
           <ul>
             <li>
               <a href="https://overlayfactsheet.com/">Overlay Fact Sheet</a>:
               created by Karl Groves in March 2021 and signed by dozens of accessibility advocates and experts.
+            </li>
+            <li>Spellacy, Michael:
+              <a href="https://shouldiuseanaccessibilityoverlay.com/">Should I Use An Accessibility Overlay?</a>
             </li>
             <li>Kornmeier, Tony:
               <a href="https://www.deque.com/blog/not-all-accessibility-overlays-are-created-equal/">Not All Accessibility Overlays Are Created Equal</a>,
