Add link: Which Software Drove People To Violence?

--- a/404.html
+++ b/404.html
@@ -43,6 +43,10 @@ permalink: /404.html
       <li>Please check whether the <abbr>URL</abbr> you entered is correct.</li>
     </ol>
 
+    <p>You might also wish to watch the video
+      <a href="https://www.youtube.com/watch?v=F7r1GnG9cQ8">Which Software Drove People To Violence?</a>
+    </p>
+
     <section id="sitemap">
       <h2>Site Map</h2>
       <ul>
