Add: Union of Equality: European Commission presents Strategy for the Rights of Persons with Disabilities 2021-2030

--- a/social-legal.html
+++ b/social-legal.html
@@ -267,6 +267,11 @@
         <a href="https://www.ag.bka.gv.at/at.gv.bka.wiki-bka/index.php/Barrierefrei:EN_301_549" hreflang="de">Barrierefrei:EN 301 549</a>,
         <i class="wiki">Verwaltungswiki / <abbr title="Bundeskanzleramt">BKA</abbr>-Wiki</i></span>.
       </li>
+      <i>
+        <a href="https://ec.europa.eu/commission/presscorner/detail/en/ip_21_810">Union of Equality: European Commission presents Strategy for the Rights of Persons with Disabilities 2021-2030</a>,
+        <i class="website">European Commission</i>, 03.03.2021 (press release)
+        <!--@@PDF-->
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
