Add example of page with marquee

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1008,6 +1008,10 @@
           <a href="https://gript.ie/ireland-suspends-astrazeneca-vaccine-as-norway-investigates-blood-clots/">Ireland suspends AstraZeneca vaccine as Norway investigates blood clots</a>.
           (Accessed on 20.03.2021.)
         </li>
+        <li>Wackett, Mike:
+          <a href="https://theloadstar.com/warning-to-ocean-carriers-dont-use-canal-crisis-to-price-gouge-customers/">Warning to ocean carriers: don't use canal crisis to 'price-gouge customers'</a>,
+          <i class="website">The Loadstar</i>, 30.03.2021 (accessed on 31.03.2021).
+        </li>
       </ul>
       <p>Nested tables:</p>
       <ul>
